Fix mobile home footer (#221)
* Fix wrong position of the mobile home footer

* Add background color & z-index to cover the shrouded content

--- a/app/components/layouts/footer.scss
+++ b/app/components/layouts/footer.scss
@@ -31,6 +31,8 @@
     text-align: left;
     color: $space_gray19;
     padding-left: 15px;
+    background-color: white;
+    z-index: 999999;
 
     .rightBox {
       position: absolute;
